--- a/gb/23/2/7/n13924221.md
+++ b/gb/23/2/7/n13924221.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美日荷联手围击中共芯片业 华虹受冲击</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/02/id13924245-GettyImages-1231762193-600x400.jpg" />
 <h6>美日荷联手限制芯片设备输中，令近日获中共国家集成电路大基金二期挹注的华虹半导体扩产计划恐受影响。图为江苏一家半导体厂。(STR/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2023年02月07日讯】（大纪元记者林岑心、常春采访报导）美近期可能联手荷兰、日本，扩大限制芯片设备DUV机台输中，与中共国家队资金有着深厚关系的中国芯片业者可能逃不过这波冲击，其中包括近期受到追捧的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%8E%E8%99%B9%E5%8D%8A%E5%AF%BC%E4%BD%93.md#1">华虹半导体</a>。</p>
-<h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E6%97%A5%E8%8D%B7.md#1">美日荷</a>协议可能阻浸润式DUV输中</h2>
+	<p>【大纪元2023年02月07日讯】（大纪元记者林岑心、常春采访报导）美近期可能联手荷兰、日本，扩大限制芯片设备DUV机台输中，与中共国家队资金有着深厚关系的中国芯片业者可能逃不过这波冲击，其中包括近期受到追捧的华虹半导体。</p>
+<h2>美日荷协议可能阻浸润式DUV输中</h2>
 <p>去年10月，美国通过芯片法案，扩大禁令，其中逻辑IC扩大到14-16nm以下、DRAM记忆体18nm以下的生产设备都不能销售到中国，此禁令涉及的美国本土设备厂商立刻生效。但当时荷商ASML、日商东京威力科创、尼康（Nikon）等企业仍可向中国供货。</p>
 <p>时事评论员王赫告诉大纪元，“中共现在的策略就是尽量开发成熟芯片的技术工艺，使它们达到极致，通过它们来生产先进芯片。而美国的禁令把先进芯片的制造工艺禁掉之后，现在又增加了成熟工艺的禁令，就是要彻底把中共这条路给堵断。”</p>
 <p>他举例说，中芯国际就利用成熟芯片的工艺技术，生产出了7nm的先进芯片。</p>
@@ -15,11 +15,11 @@
 <p>台湾工研院产科国际所研究总监杨瑞临对媒体分析，若进一步限制ASML、尼康等企业将浸润式深紫外光（DUV）机台出售给中国，在此冲击下，中国买不到DUV设备，连40、45nm制程都无法扩产。</p>
 <p>深紫外光机可以细分为ArFi、ArF Dry、KrF三大类。ArFi被称为浸润式光刻机，是较高阶的机型，可生产7nm-45nm工艺芯片，干式光刻机包括ArF Dry、KrF，前者用在65nm-130nm制程芯片，后者用在150nm-180nm制程芯片。</p>
 <p>随着制作工艺的演进，不只逻辑IC从7nm往5nm、3nm、1nm技术前进，所需的光刻设备也演进至极紫外光（EUV），包括动态随机存取记忆体（DRAM）从制程1Y往1Z、1α前进时，所需的光刻设备也由ArF dry、ArFi 演进至EUV。而最先进的EUV设备，ASML已经同意不再供应给中国。</p>
-<p>台湾投资平台财报狗分析，一旦<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E6%97%A5%E8%8D%B7.md#1">美日荷</a>这次达成协议的内容是针对浸润式光刻机的机台做出限制，这意味着中国只能买到ASML较旧的干式光刻机，用于55nm、65nm以上制程芯片的生产。</p>
+<p>台湾投资平台财报狗分析，一旦美日荷这次达成协议的内容是针对浸润式光刻机的机台做出限制，这意味着中国只能买到ASML较旧的干式光刻机，用于55nm、65nm以上制程芯片的生产。</p>
 <p>在此背景下，包括中芯国际、华虹、长江存储、长鑫存储接下来的制程升级和扩产计划都会受到影响。</p>
 <h2>华虹合营公司重点在成熟制程</h2>
 <p>华虹成立于1996年，是中国第二大芯片制造商，仅次于中芯国际。《金融时报》去年12月引述业内人士说法，自从美国对出口中国半导体实施禁令以来，中共当局不得不重新审视国内的半导体供应链，预计华虹生产的成熟制程芯片会拿到更多政策支持和资金优惠。</p>
-<p>1月19日，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%8E%E8%99%B9%E5%8D%8A%E5%AF%BC%E4%BD%93.md#1">华虹半导体</a>在港交所公告，与全资子公司华虹宏力、集成电路产业基金二期（大基金二期）及无锡市实体订立合营协议，四方出资40.2亿美元。另将募资26.8亿美元，成立合营公司，合营书中提到，将从事积体电路并采用65、55nm至40nm制程的12英寸晶圆制造销售。</p>
+<p>1月19日，华虹半导体在港交所公告，与全资子公司华虹宏力、集成电路产业基金二期（大基金二期）及无锡市实体订立合营协议，四方出资40.2亿美元。另将募资26.8亿美元，成立合营公司，合营书中提到，将从事积体电路并采用65、55nm至40nm制程的12英寸晶圆制造销售。</p>
 <p>华虹提到的上述这些制程，在半导体界都属于成熟制程，非尖端制程。</p>
 <p>华虹扩产计划获得大基金第二期挹注。但从去年中开始，有关美国欲联合荷兰、日本限制DUV机台输中的传闻不断，使得该项计划蒙上变数。</p>
 <p>华虹目前在全球半导体市场上仍然份额很小。TrendForce数据显示，全球晶圆代工市场由台积电主导，市场份额为53.4%，中芯国际5%，排名第五，华虹以2%，排名第六。</p>
@@ -31,48 +31,39 @@
 <h2>专家：美国釜底抽薪 有助区域安全</h2>
 <p>台湾国防安全研究院国防战略与资源研究所所长苏紫云2月1日对大纪元表示，“荷兰生产的成熟制程DUV机台一旦不再向中共供货，中国整个半导体业势必萎缩，其在军事装备上的发展，数位经济上的发展，还有监控人民的设备都会趋于受限。”</p>
 <p>苏紫云表示，其中包括以华虹生产成熟制程为主的公司，“虽然它大部分供应是给民用企业，但以28nm制程的芯片而言，在军用的装备也可以达到一定的水准，包括卫星导航、雷射导引、精准弹药等设备，都可以用到成熟制程的芯片。”</p>
-<p>苏紫云认为，美国限制<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%8A%AF%E7%89%87.md#1">中共芯片</a>能力发展，有两个重要层面的意义：首先，对中芯国际的封锁，代表中共未来军备发展很难跨进军用的AI，亦即军用人工智慧这一领域。其次，对成熟制程的设备禁令，代表中共未来和既有军事装备的电子设备也会受到影响，“会逐步慢性地让中共的军事力量停留在现在，甚至慢慢走向萎缩，这对于维持区域安全，是一个釜底抽薪的办法。”</p>
+<p>苏紫云认为，美国限制中共芯片能力发展，有两个重要层面的意义：首先，对中芯国际的封锁，代表中共未来军备发展很难跨进军用的AI，亦即军用人工智慧这一领域。其次，对成熟制程的设备禁令，代表中共未来和既有军事装备的电子设备也会受到影响，“会逐步慢性地让中共的军事力量停留在现在，甚至慢慢走向萎缩，这对于维持区域安全，是一个釜底抽薪的办法。”</p>
 <p>责任编辑：李穹#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917917.md#1">美日荷围剿中国晶片 ASML：不影响2023年财测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919259.md#1">王赫：美日荷芯片协议为何“神秘”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920246.md#1">【新闻大家谈】美重击华为 美日荷协议中共心惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923701.md#1">美日荷断供为何会令中国芯片业落后20年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/29/n13917917.md#1">美日荷围剿中国晶片 ASML：不影响2023年财测</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/31/n13919259.md#1">王赫：美日荷芯片协议为何“神秘”？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/1/n13920246.md#1">【新闻大家谈】美重击华为 美日荷协议中共心惊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/6/n13923701.md#1">美日荷断供为何会令中国芯片业落后20年</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/18/n10492678.md#1" target="_blank">仰岳：共产党如何干扰美国的对华政策</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11581886.md#1" target="_blank">澳青年法轮功学员：修大法给我带来的福分</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/24/n10997801.md#1" target="_blank">林辉：国军重庆号巡洋舰官兵投共后的苦难</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/1/n11424188.md#1" target="_blank">前加拿大世姐：我是如何改变对法轮功看法</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953285.md#1">独家：“神的指引” 中领馆员工成功出逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954628.md#1">【百年真相】晚年街头乞讨 大师叶企孙往事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953674.md#1">春分一刻千金难买 你要知道的春分大小事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952068.md#1">前蜀异人精通异术 预测他人命数奇准</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955636.md#1">【未解之谜】记忆的迷思</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958338.md#1">【时事金扫描】瓦格纳处决华人 战狼吴京在哪里</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958163.md#1">【全球新闻】深圳前高官孙女炫富 中共紧急封号</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958340.md#1">【十字路口】抖音四大风险 台积电护国大解密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957609.md#1">深圳高官孙女：家中存款9位数 “韭菜供的”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957429.md#1">分析：李强上任接连动作 对李克强不利</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957192.md#1">传刘亚洲收数千万政治献金 或被判死缓?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957045.md#1">露营陆综爆造假 陈伟霆等艺人回酒店被拍到</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957092.md#1">舒淇新造型显好身材 不节食减肥法引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956820.md#1">沈文程出道40年开唱 张菲挺老友现身又献声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957143.md#1">范丞丞与李晨将同框节目 范冰冰再度受关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957867.md#1">胡歌首谈当爸感受：第一次抱女儿很怕碰伤她</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957337.md#1">奶酪是心脏的死敌？这样的奶酪对身体好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958305.md#1">蓝莓、豆角农药最多！美12种污染蔬果出炉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957502.md#1">预防心脏病从生活中做起 注意4个早期征兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956668.md#1">连6年蝉联全球最幸福国家 芬兰开大师班授课</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956575.md#1">木制家具经典不败 5优点值得你投资布置居家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/7/n13924221.htm">美日荷联手围击中共芯片业 华虹受冲击</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924221.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/2/7/n13924221.htm">美日荷联手围击中共芯片业 华虹受冲击</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/2/7/n13924221.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
